--- a/src/output.css
+++ b/src/output.css
@@ -8,9 +8,6 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-600: oklch(57.7% 0.245 27.325);
-    --color-amber-400: oklch(82.8% 0.189 84.429);
-    --color-lime-300: oklch(89.7% 0.196 126.665);
-    --color-green-300: oklch(87.1% 0.15 154.449);
     --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-blue-600: oklch(54.6% 0.245 262.881);
     --color-blue-700: oklch(48.8% 0.243 264.376);
@@ -31,7 +28,6 @@
     --font-weight-bold: 700;
     --radius-md: 0.375rem;
     --radius-xl: 0.75rem;
-    --radius-2xl: 1rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -203,17 +199,8 @@
       max-width: 96rem;
     }
   }
-  .mt-\[60px\] {
-    margin-top: 60px;
-  }
   .mt-\[70px\] {
     margin-top: 70px;
-  }
-  .mt-\[80px\] {
-    margin-top: 80px;
-  }
-  .mt-\[px\] {
-    margin-top: px;
   }
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
@@ -361,6 +348,21 @@
   }
   .pt-\[10px\] {
     padding-top: 10px;
+  }
+  .pr-\[0px\] {
+    padding-right: 0px;
+  }
+  .pr-\[40px\] {
+    padding-right: 40px;
+  }
+  .pr-\[50px\] {
+    padding-right: 50px;
+  }
+  .pr-\[60px\] {
+    padding-right: 60px;
+  }
+  .pr-\[100px\] {
+    padding-right: 100px;
   }
   .text-center {
     text-align: center;
